# panda_cnoid

./: .gitignore  CMakeLists.txt  README.md
cnoid/common/: Virtual-panda-RTC.conf  robot.conf  sim_mc.cnoid  sim_mc.py
cnoid/doublepanda_default/: PDcontroller.conf.choreonoid  Virtual-doublepanda_default-RTC.conf  joint_positions.cnoid  sim_mc.py
cnoid/panda/: PDcontroller.conf.choreonoid  RobotHardware.conf  joint_positions.cnoid  robot.conf  rtc.conf.choreonoid  sim_mc.cnoid  sim_mc.py
cnoid/panda_default/: sim_mc.py
cnoid/panda_foot/: PDcontroller.conf.choreonoid  joint_positions.cnoid
cnoid/panda_hand/: joint_positions.cnoid
cnoid/panda_notool/: joint_positions.cnoid
convex/panda/: panda_link4-ch.txt  panda_link6-ch.txt  panda_rightfinger-ch.txt
convex/panda_default/: panda_link0-ch.txt  panda_link1-ch.txt  panda_link2-ch.txt  panda_link3-ch.txt  panda_link5-ch.txt  panda_link7-ch.txt
convex/panda_foot/: panda_foot-ch.txt
convex/panda_hand/: panda_hand-ch.txt  panda_leftfinger-ch.txt
model/panda/: doublepanda_arm_default.wrl  panda-panda_link7-panda-panda_link7_fixed_joint_lump__panda_foot_visual_1.wrl  panda_arm_default.wrl  panda_arm_foot.wrl  panda_arm_hand.wrl
module/: doublepanda_default.yaml  panda.yaml  panda_default.yaml  panda_foot.yaml  panda_hand.yaml  panda_notool.yaml
module/aliase/: doublepanda_default.yaml  panda.yaml  panda_default.yaml  panda_foot.yaml  panda_hand.yaml  panda_notool.yaml
rsdf/panda_default/: panda_link7.rsdf
rsdf/panda_foot/: panda_foot.rsdf
xacro/: doublepanda_arm_default.urdf.xacro  foot.gazebo.xacro  foot.xacro  main.xacro  pandaA_arm.gazebo.xacro  pandaA_arm.xacro  pandaB_arm.gazebo.xacro  pandaB_arm.xacro  panda_armB.xacro  panda_arm_default.urdf.xacro  panda_arm_foot.urdf.xacro  panda_arm_hand.urdf.xacro  tutorial.txt
